# card-tally

./: .dockerignore  .gitignore  README.md  docker-compose.yml  mise.toml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20250331120000_initial.sql  20250331140000_payees_rules_format.sql  20260429224500_payee_color.sql  20260530224000_entry_currency.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs
backend/src/parsers/: amex.rs  mod.rs  yonder.rs
backend/tests/: api_integration.rs
backend/tests/fixtures/: sample_amex.csv  sample_yonder.csv  yonder_merchant_overlap.csv
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: EntriesTable.test.tsx  EntriesTable.tsx  ErrorBanner.tsx  PayeeSelect.tsx  StatusSelect.test.tsx  StatusSelect.tsx
frontend/src/lib/: format.test.ts  format.ts  payeeColor.ts
frontend/src/pages/: ArchivePage.tsx  OrganizerPage.tsx  RulesPage.tsx  StatementsPage.tsx
frontend/src/types/: api.ts
samples/: Amex.sample.csv  Yonder.sample.csv
