[package]
name = "card_tally_backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "card-tally-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
csv = "1"
tower = "0.5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tempfile = "3"
